--- a/src/screens/card/cardScreen.css
+++ b/src/screens/card/cardScreen.css
@@ -3,18 +3,12 @@
     padding: 40px 0;
     text-align: center;
   }
-  
+
   .card-heading {
-    font-size: 28px;
+    text-align: center;
     font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #333;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    /* border-bottom: 4px solid #1976d2; */
-    display: inline-block;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    color: #1976d2;
   }
   
   .icon {
@@ -38,9 +32,8 @@
     margin-top: 30px;
     padding: 12px 24px;
     font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    /* font-weight: bold; */
+    /* letter-spacing: 1px; */
     background-color: #1976d2; /* MUI primary blue */
     color: white;
     border: none;
